prometheus/busybox-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-debug
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
