prometheus/prometheus-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/default-container: prometheus
  creationTimestamp: "2024-07-09T21:26:27Z"
  generateName: prometheus-prometheus-
  labels:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/managed-by: prometheus-operator
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/version: 2.22.1
    apps.kubernetes.io/pod-index: "0"
    controller-revision-hash: prometheus-prometheus-7c8c5c565c
    operator.prometheus.io/name: prometheus
    operator.prometheus.io/shard: "0"
    prometheus: prometheus
    statefulset.kubernetes.io/pod-name: prometheus-prometheus-0
  name: prometheus-prometheus-0
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: StatefulSet
    name: prometheus-prometheus
    uid: 221a7a01-85bc-4ec9-ba34-f1f10746a74e
  resourceVersion: "426583"
  uid: 9aae1133-8c08-46a9-bad5-063d247252df
spec:
  automountServiceAccountToken: true
  containers:
  - args:
    - --web.console.templates=/etc/prometheus/consoles
    - --web.console.libraries=/etc/prometheus/console_libraries
    - --config.file=/etc/prometheus/config_out/prometheus.env.yaml
    - --web.enable-lifecycle
    - --web.route-prefix=/
    - --storage.tsdb.retention.time=24h
    - --storage.tsdb.path=/prometheus
    image: quay.io/prometheus/prometheus:v2.22.1
    imagePullPolicy: IfNotPresent
    livenessProbe:
      failureThreshold: 6
      httpGet:
        path: /-/healthy
        port: web
        scheme: HTTP
      periodSeconds: 5
      successThreshold: 1
      timeoutSeconds: 3
    name: prometheus
    ports:
    - containerPort: 9090
      name: web
      protocol: TCP
    readinessProbe:
      failureThreshold: 3
      httpGet:
        path: /-/ready
        port: web
        scheme: HTTP
      periodSeconds: 5
      successThreshold: 1
      timeoutSeconds: 3
    resources:
      requests:
        memory: 400Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      readOnlyRootFilesystem: true
    startupProbe:
      failureThreshold: 60
      httpGet:
        path: /-/ready
        port: web
        scheme: HTTP
      periodSeconds: 15
      successThreshold: 1
      timeoutSeconds: 3
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: FallbackToLogsOnError
    volumeMounts:
    - mountPath: /etc/prometheus/config_out
      name: config-out
      readOnly: true
    - mountPath: /etc/prometheus/certs
      name: tls-assets
      readOnly: true
    - mountPath: /prometheus
      name: prometheus-prometheus-db
    - mountPath: /etc/prometheus/rules/prometheus-prometheus-rulefiles-0
      name: prometheus-prometheus-rulefiles-0
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-bckwz
      readOnly: true
  - args:
    - --listen-address=:8080
    - --reload-url=http://localhost:9090/-/reload
    - --config-file=/etc/prometheus/config/prometheus.yaml.gz
    - --config-envsubst-file=/etc/prometheus/config_out/prometheus.env.yaml
    - --watched-dir=/etc/prometheus/rules/prometheus-prometheus-rulefiles-0
    command:
    - /bin/prometheus-config-reloader
    image: quay.io/prometheus-operator/prometheus-config-reloader:v0.75.1
    imagePullPolicy: IfNotPresent
    name: config-reloader
    ports:
    - containerPort: 8080
      name: reloader-web
      protocol: TCP
    resources:
      limits:
        cpu: 10m
        memory: 50Mi
      requests:
        cpu: 10m
        memory: 50Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      readOnlyRootFilesystem: true
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: FallbackToLogsOnError
    volumeMounts:
    - mountPath: /etc/prometheus/config
      name: config
    - mountPath: /etc/prometheus/config_out
      name: config-out
    - mountPath: /etc/prometheus/rules/prometheus-prometheus-rulefiles-0
      name: prometheus-prometheus-rulefiles-0
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-bckwz
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  hostname: prometheus-prometheus-0
  nodeName: elight-standard-pc-i440fx-piix-1996
  nodeSelector:
    kubernetes.io/os: linux
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext:
    fsGroup: 2000
    runAsNonRoot: true
    runAsUser: 1000
  serviceAccount: prometheus
  serviceAccountName: prometheus
  shareProcessNamespace: false
  subdomain: prometheus-operated
  terminationGracePeriodSeconds: 600
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: config
    secret:
      defaultMode: 420
      secretName: prometheus-prometheus
  - name: tls-assets
    projected:
      defaultMode: 420
      sources:
      - secret:
          name: prometheus-prometheus-tls-assets-0
  - emptyDir:
      medium: Memory
    name: config-out
  - configMap:
      defaultMode: 420
      name: prometheus-prometheus-rulefiles-0
    name: prometheus-prometheus-rulefiles-0
  - emptyDir: {}
    name: prometheus-prometheus-db
  - name: kube-api-access-bckwz
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2024-07-09T21:26:35Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2024-07-09T21:26:52Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2024-07-09T21:27:12Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2024-07-09T21:27:12Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2024-07-09T21:26:27Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://277006443f8a290ad7c752e0cc7fa473ee2e79922e849cc8b97d31052bbdbfcc
    image: quay.io/prometheus-operator/prometheus-config-reloader:v0.75.1
    imageID: quay.io/prometheus-operator/prometheus-config-reloader@sha256:d90c01934e26f0f7461f25c747cbec7dddad7adee764fe3f60a5ebb68f52b0b4
    lastState: {}
    name: config-reloader
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2024-07-09T21:27:06Z"
  - containerID: containerd://eec1203504b7a8b988bb50a01b12c8d1ed8ab4e2de1e3710dba778b233177f31
    image: quay.io/prometheus/prometheus:v2.22.1
    imageID: quay.io/prometheus/prometheus@sha256:b899dbd1b9017b9a379f76ce5b40eead01a62762c4f2057eacef945c3c22d210
    lastState: {}
    name: prometheus
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2024-07-09T21:27:05Z"
  hostIP: 192.168.122.238
  hostIPs:
  - ip: 192.168.122.238
  initContainerStatuses:
  - containerID: containerd://33d14e64a2e811c42fbda2fbe80e83a19daddce505d37c3e197bcb8743d152f9
    image: quay.io/prometheus-operator/prometheus-config-reloader:v0.75.1
    imageID: quay.io/prometheus-operator/prometheus-config-reloader@sha256:d90c01934e26f0f7461f25c747cbec7dddad7adee764fe3f60a5ebb68f52b0b4
    lastState: {}
    name: init-config-reloader
    ready: true
    restartCount: 0
    started: false
    state:
      terminated:
        containerID: containerd://33d14e64a2e811c42fbda2fbe80e83a19daddce505d37c3e197bcb8743d152f9
        exitCode: 0
        finishedAt: "2024-07-09T21:26:51Z"
        reason: Completed
        startedAt: "2024-07-09T21:26:35Z"
  phase: Running
  podIP: 10.42.1.191
  podIPs:
  - ip: 10.42.1.191
  qosClass: Burstable
  startTime: "2024-07-09T21:26:27Z"
