prometheus/ubuntu-sleep.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu1
  labels:
    app: ubuntu
spec:
  dnsPolicy: "Default"
  containers:
  - image: ubuntu
    command:
      - "sleep"
      - "604800"
    imagePullPolicy: IfNotPresent
    name: ubuntu
  restartPolicy: Always
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - elight-standard-pc-i440fx-piix-1996
